# hetker

./: CMakeLists.txt  README.md  hetker.h  hetker_lib.h  init.c  kernels.h  list_op.c  list_op.h  main.c  strings.c  strings.h  util.c  util.h
kernels/: header.cl
kernels/list/: compact.cl  filter.cl  map.cl  prefix.cl  reduce.cl
